# 112820023_OOPL_MagicTower

./: 2026OOPL_Final.md  CMakeLists.txt  Proposal.md  files.cmake
Resources/Enemy/: Enemy  Enemy1.txt  Enemy10.txt  Enemy11.txt  Enemy12.txt  Enemy13.txt  Enemy14.txt  Enemy16.txt  Enemy17.txt  Enemy19.txt  Enemy2.txt  Enemy20.txt  Enemy21.txt  Enemy22.txt  Enemy23.txt  Enemy23_1.txt  Enemy23_3.txt  Enemy24.txt  Enemy24_1.txt  Enemy3.txt  Enemy4.txt  Enemy5.txt  Enemy6.txt  Enemy7.txt  Enemy8.txt  Enemy9.txt
Resources/Item/: Item1.txt  Item4.txt  Item8.txt
Resources/Layer/: Ground.txt  layer0.txt  layer1.txt  layer10.txt  layer11.txt  layer12.txt  layer13.txt  layer14.txt  layer15.txt  layer16.txt  layer17.txt  layer18.txt  layer19.txt  layer2.txt  layer20.txt  layer21.txt  layer22.txt  layer23.txt  layer23_1.txt  layer23_3.txt  layer24.txt  layer3.txt  layer4.txt  layer5.txt  layer6.txt  layer7.txt  layer8.txt  layer9.txt  樓層傳送點.txt
Resources/NPC/: NPC0.txt  NPC13.txt  NPC15.txt  NPC16.txt  NPC18.txt  NPC2.txt  NPC23.txt  NPC3.txt  NPC4.txt  NPC5.txt
Resources/Text/: Ending.txt  Starting.txt
include/App/: App.hpp  BackgroundImage.hpp
include/Character/: Character.hpp  Player.hpp
include/Enemy/: Enemy.hpp
include/Item/: Item.hpp
include/Map/: Map.hpp  Stair.hpp
include/NPC/: NPC.hpp  NPCDialog.hpp  NPCEventManager.hpp
include/Shop/: Shop.hpp
include/System/: Battle.hpp  BattleAnimation.hpp  BattleScene.hpp  CollisionHandler.hpp  FloorTeleport.hpp  GameFlowScene.hpp  MonsterBook.hpp  NPCEventManager.hpp  NoticeScene.hpp  RewardMessage.hpp  ShopEventManager.hpp  ShopScene.hpp  TextObject.hpp  UIStatus.hpp
src/App/: App.cpp  main.cpp
src/Character/: Player.cpp
src/Enemy/: Enemy.cpp
src/Item/: Item.cpp
src/Map/: Map.cpp  Stair.cpp
src/NPC/: NPC.cpp  NPCDialog.cpp  NPCEventManager.cpp
src/Shop/: Shop.cpp
src/System/: Battle.cpp  BattleScene.cpp  CollisionHandler.cpp  FloorTeleport.cpp  GameFlowScene.cpp  MonsterBook.cpp  NPCEventManager.cpp  NoticeScene.cpp  RewardMessage.cpp  ShopEventManager.cpp  ShopScene.cpp  TextObject.cpp  UIStatus.cpp
