cmake_minimum_required(VERSION 3.16)
project(MagicTower)

set(CMAKE_CXX_STANDARD 17)

cmake_policy(SET CMP0135 NEW)

include(FetchContent)
set(FETCHCONTENT_QUIET FALSE)

FetchContent_Declare(
    ptsd

    URL         https://github.com/ntut-open-source-club/practical-tools-for-simple-design/archive/refs/tags/v0.2.zip

    # Or alternatively if you want to use a specific git commit instead of a release:
    # GIT_REPOSITORY  https://github.com/ntut-open-source-club/practical-tools-for-simple-design.git
    # GIT_TAG         <git_tag>

    SOURCE_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/PTSD
)

FetchContent_MakeAvailable(ptsd)

include(files.cmake)
set(SRC_DIR ${CMAKE_SOURCE_DIR}/src)
set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
list(TRANSFORM SRC_FILES PREPEND ${CMAKE_SOURCE_DIR}/)
list(TRANSFORM INCLUDE_FILES PREPEND ${CMAKE_SOURCE_DIR}/)
#list(TRANSFORM SRC_FILES PREPEND ${SRC_DIR}/)
#list(TRANSFORM INCLUDE_FILES PREPEND ${INCLUDE_DIR}/)

# file(GLOB_RECURSE SRC_FILES src/*)
# file(GLOB_RECURSE HEADER_FILES include/*)

add_executable(${PROJECT_NAME}
    ${SRC_FILES}
        src/App/App.cpp
        src/App/main.cpp
        src/Map/Map.cpp
        src/Map/Stair.cpp
        src/Map/Door.cpp
        src/Character/Player.cpp
        src/Item/Item.cpp
        src/System/CollisionHandler.cpp

    ${INCLUDE_FILES}
        include/App/App.hpp
        include/App/BackgroundImage.hpp
        include/Map/Map.hpp
        include/Map/Stair.hpp
        include/Map/Door.hpp
        include/Character/Player.hpp
        include/Character/Character.hpp
        include/Item/Item.hpp
        include/System/CollisionHandler.hpp
        include/System/UIStatus.hpp
        src/System/UIStatus.cpp
        include/System/TextObject.hpp
        include/System/TextObject.hpp
        src/System/TextObject.cpp
        include/Enemy/Enemy.hpp
        src/Enemy/Enemy.cpp
        include/System/Battle.hpp
        src/System/Battle.cpp
        include/System/BattleAnimation.hpp
        include/NPC/NPC.hpp
        src/NPC/NPC.cpp
        include/System/NPCEventManager.hpp
        src/System/NPCEventManager.cpp


)

if(MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE /W4)
else()
    target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic)
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(${PROJECT_NAME} PRIVATE RESOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/Resources")
else()
    message(FATAL_ERROR "relative RESOURCE_DIR is WIP, Please use `-DCMAKE_BUILD_TYPE=Debug` build for now.")
    # target_compile_definitions(${PROJECT_NAME} PRIVATE RESOURCE_DIR="${CMAKE_INSTALL_PREFIX}/Resources")
endif()

target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${DEPENDENCY_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/PTSD/include)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIR})

target_link_libraries(${PROJECT_NAME}
    SDL2::SDL2main
    PTSD
)
